<resources>
    <string name="app_name">tidder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_createsub">Create Sub</string>
    <string name="menu_createpost">Create Post</string>
    <string name="input_name">Name</string>
    <string name="input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="user_is_logged_in">USER_IS_LOGGED_IN</string>
    <string name="menu_saved">Saved</string>
    <string name="button_signup">Sign Up</string>
    <string name="input_email">E-mail</string>
    <string name="input_confirmPassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_sublist">List of Subs</string>
    <string name="menu_sub">Sub</string>
    <string name="input_desc">Description</string>
    <string name="button_postcomment">Post</string>
    <string name="input_postcomment">Your comment...</string>
</resources>