<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.nagyd.tidder.ui.signup.SignUpFragment"
        android:label="@string/button_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_sublist"
        android:name="com.nagyd.tidder.ui.sublist.SubListFragment"
        android:label="@string/nav_sublist"
        tools:layout="@layout/fragment_sub_list" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.nagyd.tidder.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.nagyd.tidder.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.nagyd.tidder.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_sub"
        android:name="com.nagyd.tidder.ui.sub.SubFragment"
        android:label=""
        tools:layout="@layout/fragment_sub" />

    <fragment
        android:id="@+id/nav_createsub"
        android:name="com.nagyd.tidder.ui.createsub.CreateSubFragment"
        android:label="@string/menu_createsub"
        tools:layout="@layout/fragment_create_sub" />

    <fragment
        android:id="@+id/nav_createpost"
        android:name="com.nagyd.tidder.ui.createpost.CreatePostFragment"
        android:label="@string/menu_createpost"
        tools:layout="@layout/fragment_create_post" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.nagyd.tidder.ui.post.PostFragment"
        android:label=""
        tools:layout="@layout/fragment_post" />
</navigation>