<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_gear"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/icon_circle_check"
            android:title="@string/menu_login" />
    </group>
</menu>