<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.createsub.CreateSubFragment">

    <EditText
        android:id="@+id/createSubName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-200dp"
        android:height="@dimen/input_min_height"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createSubDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/input_desc"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSubName" />

    <Button
        android:id="@+id/createSubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_createsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSubDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>